# WaveVerify

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
conf/: base.yml  effects_config.yml  test.yml
examples/: basic_usage.py  watermark_strategies.py  web_api_integration.py
model/: __init__.py  detector.py  discriminator.py  generator.py  locator.py  watermarking.py
modules/: __init__.py  audio_modules.py  conv.py  norm.py  seanet.py  weight_standardization.py
scripts/: evaluate.py  loss.py  train.py
utils/: __init__.py  effect_augmentation.py  effect_scheduler.py  localization_augmentation.py  seq_augmentation.py
waveverify/: __init__.py  config.py  core.py  utils.py  watermark_id.py
waveverify/data/: base.yml
