[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "waveverify"
version = "0.1.0"
description = "Audio watermarking for media authentication and combatting deepfakes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}  # Update based on actual license
authors = [
    {name = "Aditya Pujari"},
    {name = "Ajita Rattani"},
]
maintainers = [
    {name = "Aditya Pujari"},
]
keywords = [
    "audio",
    "watermarking",
    "deepfake",
    "detection",
    "authentication",
    "watermark",
    "embedding",
    "audio-processing",
    "machine-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "argbind",
    "descript-audiotools",
    "torch>=1.9",
    "torchaudio",
    "numpy",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "scipy",
    "pystoi",
    "pesq",
]

[project.urls]
Homepage = "https://github.com/pujariaditya/WaveVerify"
Documentation = "https://github.com/pujariaditya/WaveVerify#readme"
Repository = "https://github.com/pujariaditya/WaveVerify.git"
"Bug Tracker" = "https://github.com/pujariaditya/WaveVerify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
training = [
    "wandb",
    "tensorboard",
    "einops",
    "julius",
    "transformers",
    "numba",
]
web = [
    "flask>=2.0",
    "werkzeug>=2.0",
]

[tool.setuptools]
packages = ["waveverify", "model", "modules", "utils"]

[tool.setuptools.package-data]
waveverify = ["data/*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100